--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,11 @@ layout: default
 <article class="page">
 
   <h1>{{ page.title }}</h1>
+  
+      
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" />
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>  
 
   <div class="entry">
     {{ content }}
