--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.18/dist/katex.min.css" integrity="sha384-zTROYFVGOfTw7JV7KUu8udsvW2fx4lWOsCEDqhBreBwlHI4ioVRtmIvEThzJHGET" crossorigin="anonymous" media="print" onload="this.media='all'"/>
   
 
+  {%- if page.datatable == true %}
+<link rel='stylesheet' href='https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css'><link rel="stylesheet" href="./style.css">
+   <script src='https://code.jquery.com/jquery-3.5.1.js'></script>
+<script src='https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js'></script><script  src="/js/jekyll-search.js"></script>
+    </script>
+    {% endif %}
+  
   <body>
     <div class="wrapper-masthead">
       <div class="container">
