--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,16 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
+<!-- Look the author details up from the site config. -->
+{% assign author = site.data.authors[page.author] %}
 
+<!-- Output author details if some exist. -->
+{% if author %}
+    <span>
+        <!-- Personal Info. -->
+        Written by <a href="{{ author.web }}">{{ author.name }}</a>
+    </span>
+{% endif %}
   <div class="entry">
     {{ content }}
   </div>
