--- a/_includes/toollist.html
+++ b/_includes/toollist.html
@@ -8,42 +8,42 @@
 
 <div id="my-table">
 <!-- The pre-processor for this pen is set to Markdown   -->
-<table>
+  
+  <table>
 <thead>
-<tr>
-<th>Food</th>
-<th>Description</th>
-<th>Category</th>
-<th>Sample type</th>
-</tr>
+  <tr>
+    <th>Name </th>
+    <th>Description</th>
+    <th>Category</th>
+    <th>Gihub Link </th>
+    <th>Quick Start</th>
+  </tr>
 </thead>
 <tbody>
-<tr>
-<td>Apples</td>
-<td>A small, somewhat round ...</td>
-<td>Fruit</td>
-<td>Fuji</td>
-</tr>
-<tr>
-<td>Bananas</td>
-<td>A long and curved, often-yellow ...</td>
-<td>Fruit</td>
-<td>Snow</td>
-</tr>
-<tr>
-<td>Kiwis</td>
-<td>A small, hairy-skinned sweet ...</td>
-<td>Fruit</td>
-<td>Golden</td>
-</tr>
-<tr>
-<td>Oranges</td>
-<td>A spherical, orange-colored sweet ...</td>
-<td>Fruit</td>
-<td>Navel</td>
-</tr>
+  <tr>
+    <td>kops</td>
+    <td>Production Grade K8s Installation, Upgrades, and Management</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/kubernetes/kops">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>silver-surfer</td>
+    <td>An OpenSource project to check ApiVersion compatibility and provide Migration path for Kubernetes objects when upgrading Kubernetes to latest versions.</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/devtron-labs/silver-surfer">[link]</a></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Kube-ops-view</td>
+    <td>Kubernetes Operational View - read-only system dashboard for multiple K8s clusters</td>
+    <td></td>
+    <td><a href="https://github.com/hjacobs/kube-ops-view">[link]</a></td>
+    <td>-</td>
+  </tr>
 </tbody>
 </table>
+
 </div>
 <!-- partial -->
   <script src='https://code.jquery.com/jquery-3.5.1.js'></script>
