--- a/_includes/toollist.html
+++ b/_includes/toollist.html
@@ -37,13 +37,47 @@
   <tr>
     <td>Kube-ops-view</td>
     <td>Kubernetes Operational View - read-only system dashboard for multiple K8s clusters</td>
-    <td></td>
+    <td>Cluster Management</td>
     <td><a href="https://github.com/hjacobs/kube-ops-view">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>kubeprompt</td>
+    <td>Isolated kubectl shells and prompt info</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/jlesquembre/kubeprompt">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>metalk8s</td>
+    <td>An opinionated Kubernetes distribution with a focus on long-term on-prem deployments</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/scality/metalk8s">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>kind</td>
+    <td>Kubernetes IN Docker - local clusters for testing Kubernetes</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/kubernetes-sigs/kind">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>cert-manager</td>
+    <td>Automatically provision and manage TLS certificates in Kubernetes</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/jetstack/cert-manager">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>clusterman</td>
+    <td>Cluster Autoscaler for Kubernetes and Mesos</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/FairwindsOps/goldilocks">[link]</a></td>
     <td>-</td>
   </tr>
 </tbody>
 </table>
-
 </div>
 <!-- partial -->
   <script src='https://code.jquery.com/jquery-3.5.1.js'></script>
