--- a/_includes/toollist.html
+++ b/_includes/toollist.html
@@ -76,6 +76,71 @@
     <td><a href="https://github.com/FairwindsOps/goldilocks">[link]</a></td>
     <td>-</td>
   </tr>
+  <tr>
+    <td>katafygio</td>
+    <td>Dump, or continuously backup Kubernetes objets as yaml files in git</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/bpineau/katafygio">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>Rancher</td>
+    <td>Complete container management platform</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/rancher/rancher">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>sealed-secrets</td>
+    <td>A Kubernetes controller and tool for one-way encrypted Secrets</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/bitnami-labs/sealed-secrets">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>Kruise</td>
+    <td>Automate application management on Kubernetes (project under CNCF)</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/openkruise/kruise">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>kubectl-snapshot</td>
+    <td>Take Cluster Snapshots</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/fbrubbo/kubectl-snapshot">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>carvel-kapp</td>
+    <td>kapp is a simple deployment tool focused on the concept of "Kubernetes application" — a set of resources with the same label</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/vmware-tanzu/carvel-kapp">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>KEDA</td>
+    <td>KEDA is a Kubernetes-based Event Driven Autoscaling component. It provides event driven scale for any container running in Kubernetes</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/kedacore/keda">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>octant</td>
+    <td>Highly extensible platform for developers to better understand the complexity of Kubernetes clusters.</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/vmware-tanzu/octant">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>portainer-k8s</td>
+    <td>How to deploy Portainer inside a Kubernetes environment</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/portainer/k8s">[link]</a></td>
+    <td>-</td>
+  </tr>
+
+  
 </tbody>
 </table>
 </div>
