--- a/_includes/toollist.html
+++ b/_includes/toollist.html
@@ -139,6 +139,27 @@
     <td><a href="https://github.com/portainer/k8s">[link]</a></td>
     <td>-</td>
   </tr>
+  <tr>
+    <td>Gardener</td>
+    <td>Deliver fully-managed clusters at scale everywhere with your own Kubernetes-as-a-Service</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/gardener/gardener">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>config-syncer</td>
+    <td>🛡️ Kubernetes Config Syncer (previously kubed)</td>
+    <td>Cluster Management</td>
+    <td><a href="https://github.com/kubeops/config-syncer">[link]</a></td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>kubestack</td>
+    <td>The best developer experience to build your Kubernetes platform</td>
+    <td>Cluster Management</td>
+    <td><a href="https://www.kubestack.com">[link]</a></td>
+    <td>-</td>
+  </tr>
 
   
 </tbody>
