--- a/_layouts/poptweet.html
+++ b/_layouts/poptweet.html
@@ -27,10 +27,10 @@ layout: default
 
   <div class="popup-messages">
   
-  <!-- get your own twitter publish code at https://publish.twitter.com/ -->
-  <a class="twitter-timeline" href="https://twitter.com/junlulocky">Tweets by junlulocky</a> 
-  <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     
+<a class="twitter-timeline" href="https://twitter.com/KubeDaily?ref_src=twsrc%5Etfw">Tweets by KubeDaily</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>    
+  <!-- get your own twitter publish code at https://publish.twitter.com/ -->
+
   </div>
 
 
