--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,6 +92,7 @@
         </footer>
       </div>
     </div>
+    {% include poptweet.html %}
 
     <script defer src="https://cdn.plyr.io/3.6.8/plyr.js"></script>
     <script>
