--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -36,6 +36,16 @@
 <meta name="naver-site-verification" content="{{ site.Params.analytics.naver.SiteVerificationTag }}">
 {{- end }}
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-08R32BP506"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-08R32BP506');
+</script>
+
 {{- /* Styles */}}
 
 {{- /* includes */}}
