--- a/layouts/partials/blog/post-list.html
+++ b/layouts/partials/blog/post-list.html
@@ -15,9 +15,9 @@
               <p class="subtitle is-size-5 is-size-6-mobile has-text-grey">
                 {{ $date }}
               </p>
-
               <div class="content">
-                {{ .Content | truncate 250 }}
+                {{ .Content | truncate 0 }}
+                Read more <i class="fas fa-arrow-right"></i>
               </div>
             </div>
           </div>
