--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,6 +15,7 @@
       </p>
 
       <br />
+      <center> <a href="https://visitorbadge.io/status?path=https%3A%2F%2Fkubedaily.com"><img src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fkubedaily.com&label=KubeDaily&labelColor=%232ccce4&countColor=%2337d67a" /></a> </center> 
 
       <p class="has-text-weight-light">
         &copy; {{ $currentYear }}  Happy to help you with your Cloud Native Journey.
