--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -25,7 +25,7 @@
   <article>
     <center>
     <img src="img/logos/1.png" alt="Sample photo">
-      <a class="button is-secondary is-size-5 is-size-6-mobile" href="/docs/0.0.1/pre-requist/">
+      <a class="button is-secondary is-size-5 is-size-6-mobile" href="/docs/0.0.1/">
         <span>
         Docker 
         </span>
