--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -86,9 +86,9 @@
       </div>
 
       <div class="column">
-        
+     
 
-        <figure class="image">
+        <figure class="image is-size-4 is-size-5-mobile">
 
           <link rel="stylesheet" href="./style.css">
       <div class="wrapper">
