--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 .wrapper{
-  width: 600px;
+  width: 95%;
   height: 300px;
   position: relative;
   background-color: var(--wrapper-background-c);
