--- a/layouts/partials/home/project-info.html
+++ b/layouts/partials/home/project-info.html
@@ -18,14 +18,8 @@
           
         </p>
         <div class="container">
-          <img src="/img/logos/profile-pic-3.png" alt="Avatar" style="width:90px">
-          <iconify-icon icon="skill-icons:linkedin"> </iconify-icon> 
-          <iconify-icon icon="skill-icons:twitter"></iconify-icon>
-          <iconify-icon icon="skill-icons:github-dark"></iconify-icon>
-          <iconify-icon icon="skill-icons:instagram"></iconify-icon>
-          <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-          <p><span>Sangam Biradar </span> | Principal Security Advocate @Deepfence.io </p>
-          <p>Docker Community Leader @DockerCon2020 Award Winner </p>
+      <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="sangambiradar" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/sangambiradar?trk=profile-badge">Sangam B.</a></div>
+              
         </div>
         
       
