--- a/layouts/partials/home/project-info.html
+++ b/layouts/partials/home/project-info.html
@@ -18,6 +18,7 @@
           
         </p>
         <div class="container">
+          <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
       <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="sangambiradar" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/sangambiradar?trk=profile-badge">Sangam B.</a></div>
               
         </div>
