--- a/layouts/partials/home/project-info.html
+++ b/layouts/partials/home/project-info.html
@@ -19,7 +19,8 @@
         </p>
         <div class="container">
     <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
-<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="sangambiradar" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/sangambiradar?trk=profile-badge">Sangam B.</a></div>
+<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="sangambiradar" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/sangambiradar?trk=profile-badge">Sangam Biradar 🔒</a></div>
+              
                             
         </div>
         
