--- a/assets/scss/component/_dropdown.scss
+++ b/assets/scss/component/_dropdown.scss
@@ -5,7 +5,7 @@
 .dropdown-btn {
   display: flex;
   flex-direction: row;
-  border: 1px solid var(--border-color);
+  box-shadow: var(--box-shadow);
   border-radius: 6px;
   padding: 6px;
   cursor: pointer;
@@ -20,11 +20,13 @@
   display: none;
   position: absolute;
   right: 0;
+  top: 34px;
   min-width: 100px;
   max-height: 240px;
   overflow-x: auto;
-  border: 1px solid var(--border-color);
-  background: white;
+  background: var(--background);
+  color: var(--color3);
+  box-shadow: var(--box-shadow2);
   z-index: 1;
   border-radius: 6px;
   padding: 3px;
@@ -45,21 +47,5 @@
 }
 
 .dropdown-menu button:hover, .dropdown-menu a:hover {
-  background: rgba(0, 0, 0, 0.05);
-}
-
-:root[data-color="dark"] .dropdown-menu button:hover, .dropdown-menu a:hover {
-  background: rgba(255, 255, 255, 0.05);
-}
-
-:root[data-color="night"] .dropdown-menu button:hover, .dropdown-menu a:hover {
-  background: rgba(255, 255, 255, 0.05);
-}
-
-:root[data-color="dark"] .dropdown-menu{
-  background: #121212;
-}
-
-:root[data-color="night"] .dropdown-menu {
-  background: #333333;
+  background: var(--background-fg);
 }
