--- a/assets/scss/component/article.scss
+++ b/assets/scss/component/article.scss
@@ -46,7 +46,7 @@
 #article-content table,
 #article-content ul {
   margin-top: 1em;
-  line-height: 1.8;
+  line-height: 1.8rem;
   letter-spacing: -.1px;
 }
 
