--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,6 +1,6 @@
 /*!
  * Docura (https://docura.github.io/)
- * Copyright 2022 Dumindu Madunuwan
+ * Copyright 2022-2023 Dumindu Madunuwan
  * Licensed under the MIT License.
  */
 
