--- a/assets/scss/component/docsearch.scss
+++ b/assets/scss/component/docsearch.scss
@@ -5,7 +5,7 @@
   --docsearch-icon-stroke-width: 1.4;
   --docsearch-highlight-color: var(--docsearch-primary-color);
   --docsearch-muted-color: #969faf;
-  --docsearch-container-background: rgba(101, 108, 133, 0.8);
+  --docsearch-container-background: rgba(255, 255, 255, 0.1);
   --docsearch-logo-color: #5468ff;
   --docsearch-modal-width: 560px;
   --docsearch-modal-height: 600px;
@@ -23,7 +23,6 @@
 }
 
 :root[data-color="dark"] {
-  --docsearch-container-background: rgba(9, 10, 17, 0.8);
   --docsearch-modal-shadow: inset 1px 1px 0 0 #2c2e40, 0 3px 8px 0 #000309;
   --docsearch-searchbox-focus-background: #000;
   --docsearch-hit-color: #bec3c9;
@@ -34,7 +33,6 @@
 }
 
 :root[data-color="night"] {
-  --docsearch-container-background: rgba(9, 10, 17, 0.8);
   --docsearch-modal-shadow: inset 1px 1px 0 0 #2c2e40, 0 3px 8px 0 #000309;
   --docsearch-searchbox-focus-background: #000;
   --docsearch-hit-color: #bec3c9;
@@ -48,7 +46,7 @@
   width: 100%;
   line-height: 1.6em;
   align-items: center;
-  border: 1px solid var(--border-color);
+  box-shadow: var(--box-shadow);
   border-radius: 24px;
   color: var(--color);
   cursor: pointer;
@@ -77,7 +75,8 @@
 
 .DocSearch-Button-Placeholder {
   font-size: 1rem;
-  padding: 0 12px 0 6px
+  padding: 0 12px 0 6px;
+  color: var(--color3)
 }
 
 .DocSearch-Button-Keys {
@@ -132,7 +131,9 @@
   position: fixed;
   top: 0;
   width: 100vw;
-  z-index: 200
+  z-index: 200;
+  backdrop-filter: blur(var(--blur));
+  -webkit-backdrop-filter: blur(var(--blur));
 }
 
 .DocSearch-Container a {
