--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -4,7 +4,7 @@ body {
   color: var(--color);
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100svh;
 }
 
 #site-header {
@@ -206,6 +206,12 @@ main {
     flex-direction: column;
   }
 
+  #sidebar .sticky {
+    position: fixed;
+    left: 0;
+    width: 20%;
+  }
+
   #toc .sticky {
     position: fixed;
     right: 0;
@@ -224,7 +230,6 @@ main {
     overflow-x: auto;
     background: var(--background);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
   }
 
   :root[data-color="dark"] #toc, :root[data-color="night"] #toc {
@@ -236,6 +241,18 @@ main {
     display: flex;
     flex-direction: column;
     padding-left: 16px;
+    z-index: 10;
+    cursor: default;
+  }
+
+  .offcanvas-toc-on:before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
   }
 
   .offcanvas-toc-on #toc .btn-close {
@@ -247,12 +264,13 @@ main {
 
   #article-nav-toc-btn {
     display: flex;
-    border: 1px solid var(--border-color);
+    box-shadow: var(--box-shadow2);
     border-radius: 6px;
     padding: 6px;
     cursor: pointer;
     white-space: nowrap;
     gap: 6px;
+    color: var(--color2);
   }
 }
 
@@ -267,7 +285,6 @@ main {
     overflow-x: auto;
     background: var(--background);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
   }
 
   :root[data-color="dark"] #sidebar, :root[data-color="night"] #sidebar {
@@ -278,6 +295,18 @@ main {
     animation: slide-in-left .3s forwards;
     display: flex;
     flex-direction: column;
+    z-index: 10;
+    cursor: default;
+  }
+
+  .offcanvas-sidebar-on:before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
   }
 
   .offcanvas-sidebar-on #sidebar .btn-close {
@@ -294,17 +323,30 @@ main {
     justify-content: space-between;
     height: var(--site-header-height);
     align-items: center;
+    padding: 0 2px;
   }
 
   #article-nav-menu-btn {
     display: flex;
-    border: 1px solid var(--border-color);
+    box-shadow: var(--box-shadow2);
     border-radius: 6px;
     padding: 6px;
     cursor: pointer;
     white-space: nowrap;
     gap: 6px;
+    color: var(--color2);
   }
+}
+
+body.offcanvas-sidebar-on, body.offcanvas-toc-on {
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.offcanvas-sidebar-on:before, .offcanvas-toc-on:before {
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(var(--blur));
+  -webkit-backdrop-filter: blur(var(--blur));
 }
 
 @keyframes slide-in-left {
