--- a/assets/scss/theme/default.scss
+++ b/assets/scss/theme/default.scss
@@ -18,7 +18,14 @@
   --background-fg2: #ebebeb;
   --border-color: #dddddd;
 
-  --home-cover-background: linear-gradient(135deg, rgba(79, 113, 235, 0.2) 9.8%, rgba(232, 79, 235, 0.2) 92.84%);
+  --box-shadow: 0 0 1px rgba(0, 0, 0, .7);
+  --box-shadow2: 0 0 3px rgba(0, 0, 0, .2);
+
+  --blur: 10px;
+
+  --home-cover-background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,255,250,1) 25%, rgba(214,219,220,1) 50%, rgba(255,255,250,1) 75%, rgba(255,255,255,1) 100%);
+
+  --icon-filter: invert(41%) sepia(19%) saturate(840%) hue-rotate(161deg) brightness(92%) contrast(92%);
 
   /* base16 tomorrow */
   --chroma-base00: #f9f9f9;
@@ -49,6 +56,13 @@
   --background-fg2: #1f1f1f;
   --border-color: rgba(255, 255, 255, .4);
 
+  --box-shadow: 0 0 1px rgba(255, 255, 255, 1);
+  --box-shadow2: 0 0 3px rgba(255, 255, 255, .6);
+
+  --home-cover-background: radial-gradient(circle, rgba(23,23,25,1) 0%, rgba(18,18,0,1) 25%, rgba(32,32,32,1) 50%, rgba(18,18,0,1) 75%, rgba(23,23,25,1) 100%);
+
+  --icon-filter: invert(83%) sepia(0%) saturate(1582%) hue-rotate(126deg) brightness(86%) contrast(80%);
+
   /* base16 tomorrow night */
   --chroma-base00: #080808;
   --chroma-base01: #393939;
@@ -78,6 +92,13 @@
   --background-fg2: #303030;
   --border-color: rgba(255, 255, 255, 0.2);
 
+  --box-shadow: 0 0 1px rgba(225, 255, 255, 1);
+  --box-shadow2: 0 0 3px rgba(255, 255, 255, .6);
+
+  --home-cover-background: radial-gradient(circle, rgba(52,52,52,1) 0%, rgba(42,42,42,1) 25%, rgba(57,57,57,1) 50%, rgba(42,42,42,1) 75%, rgba(52,52,52,1) 100%);
+
+  --icon-filter: invert(60%) sepia(25%) saturate(20%) hue-rotate(343deg) brightness(98%) contrast(94%);
+
   /* base16 twilight */
   --chroma-base00: #1e1e1e;
   --chroma-base01: #323537;
@@ -97,14 +118,6 @@
   --chroma-base0F: #9b703f;
 }
 
-:root[data-color="light"] .icon:not(.icon-colored) {
-  filter: invert(30%) sepia(24%) saturate(758%) hue-rotate(160deg) brightness(89%) contrast(90%);
-}
-
-:root[data-color="dark"] .icon:not(.icon-colored) {
-  filter: invert(97%) sepia(0%) saturate(3231%) hue-rotate(294deg) brightness(118%) contrast(87%);
-}
-
-:root[data-color="night"] .icon:not(.icon-colored) {
-  filter: invert(100%) sepia(2%) saturate(1090%) hue-rotate(294deg) brightness(83%) contrast(92%);
+.icon:not(.icon-colored) {
+  filter: var(--icon-filter);
 }
