--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -36,7 +36,7 @@
   </div>
 
   <!-- fund -->
-  <a href="https://visitorbadge.io/status?path=https%3A%2F%2Flinuxcollective.github.io"><img src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Flinuxcollective.github.io&label=VISITORS&countColor=%23263759&style=plastic" /></a>
+  <center> <a href="https://visitorbadge.io/status?path=https%3A%2F%2Fkubedaily.com"><img src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fkubedaily.com&label=KubeDaily&labelColor=%232ccce4&countColor=%2337d67a" /></a> </center> 
 
   <!-- love -->
   <div id="site-footer-love">
