--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -16,14 +16,14 @@
       {{ end }}
       <h3> Thanks to all our contributors!</h3>
 
-      <a href="https://github.com/linuxcollective/linuxcollective.github.io/graphs/contributors">
-        <img src="https://contrib.rocks/image?repo=linuxcollective/linuxcollective.github.io" />
+      <a href="https://github.com/kubernetesdaily/kubernetesdaily.github.io/graphs/contributors">
+        <img src="https://contrib.rocks/image?repo=https://github.com/kubernetesdaily/kubernetesdaily.github.io" />
       </a>
       <!--  https://contrib.rocks -->
     </section>
   
 
-
+   
   </main>
 </div>
 {{ end }}
