--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -1,7 +1,8 @@
 <header id="site-header">
   <!-- brand -->
   <div id="site-header-brand">
-    <a href="/">{{ .Site.Title }}</a>
+     <!--  <img src="/img/logos/KubeDaily-1.png"  width="24" height="24"> -->
+    <!-- <a href="/">{{ .Site.Title }}</a> -->
   </div>
 
   <!-- controls -->
