--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,8 +1,9 @@
 {{ $dropdown := resources.Get "js/component/dropdown.js" }}
 {{ $colorPreference := resources.Get "js/component/color-preference.js" }}
 {{ $articleNav := resources.Get "js/component/article-nav.js" }}
+{{ $sidebar := resources.Get "js/component/sidebar.js" }}
 {{ $toc := resources.Get "js/component/toc.js" }}
-{{ $baseJs := slice $dropdown $colorPreference $articleNav $toc | resources.Concat "js/base.js" | minify }}
+{{ $baseJs := slice $dropdown $colorPreference $articleNav $sidebar $toc | resources.Concat "js/base.js" | minify }}
 
 <script type="text/javascript" src="{{ $baseJs.RelPermalink }}"></script>
 
@@ -19,3 +20,10 @@
       });
   </script>
 {{ end }}
+
+<script type="application/javascript">
+    if('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js?{{ now.Format "2006-01-02" }}')
+            .catch(function(err) {console.error('ServiceWorker registration failed: ', err);});
+    }
+</script>
