update-landing-page

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -17,14 +17,185 @@
       <h3> Thanks to all our contributors!</h3>
 
       <a href="https://github.com/kubernetesdaily/kubernetesdaily.github.io/graphs/contributors">
-        <img src="https://contrib.rocks/image?repo=https://github.com/kubernetesdaily/kubernetesdaily.github.io" />
+        <img src="https://contrib.rocks/image?repo=kubernetesdaily/kubernetesdaily.github.io" />
       </a>
       <!--  https://contrib.rocks -->
-    </section>
-  
 
+  
    
+      <p>Join Our Thriving Community: Over </p>
+      <div id="counter">
+          <!-- counts -->
+      </div>
+      <p>Trained in Our In-Person Workshops for FREE ! </p>
+   
+      <script>
+          let counts = setInterval(updated);
+          let upto = 0;
+          function updated() {
+              let count = document.getElementById("counter");
+              count.innerHTML = ++upto;
+              if (upto === 20000) {
+                  clearInterval(counts);
+              }
+          }
+      </script>
+
+
+  
+      &nbsp;&nbsp;&nbsp;
+
+<center> <h4> Event Gallery </h4>  </center>   
+  
+    <style>
+      .gallery {
+          display: grid;
+          grid-template-columns: repeat(8, 1fr); /* Adjust the number of columns as needed */
+          gap: 10px; /* Adjust the gap between grid items */
+      }
+
+      .gallery-item {
+          border: 1px solid #ccc;
+          padding: 05px;
+          text-align: center;
+      }
+
+      .gallery-item img {
+          max-width: 100%;
+          height: auto;
+      }
+
+      .marquee-container {
+          overflow: hidden;
+      }
+
+      .marquee-content {
+          white-space: nowrap;
+          animation: scroll 10s linear infinite;
+      }
+
+      @keyframes scroll {
+          0% {
+              transform: translateX(100%);
+          }
+          100% {
+              transform: translateX(-100%);
+          }
+      }
+  </style>
+  <div class="marquee-container">
+    <div class="marquee-content">
+        <div class="gallery">
+            <div class="gallery-item">
+                <img src="/img/slider/20230528_113027.jpg" alt="Image 1">
+            </div>
+            <div class="gallery-item">
+                <img src="/img/slider/brainanalaytics.jpg" alt="Image 2">
+            </div>
+            <div class="gallery-item">
+                <img src="/img/slider/Citrix-R&D.jpg" alt="Image 3">
+            </div>
+            <div class="gallery-item">
+              <img src="/img/slider/CNCF-Thane.jpg" alt="Image 3">
+          </div>
+          <div class="gallery-item">
+            <img src="/img/slider/CSA-Banglore-2023.jpg" alt="Image 3">
+        </div>
+        <div class="gallery-item">
+          <img src="/img/slider/DellEMC.jpg" alt="Image 3">
+      </div>
+      <div class="gallery-item">
+        <img src="/img/slider/DevRel-Docker_2016.jpg" alt="Image 3">
+        </div>
+        <div class="gallery-item">
+          <img src="/img/slider/Docker-9th-birthday.JPG" alt="Image 3">
+          </div>
+          <div class="gallery-item">
+            <img src="/img/slider/Docker-Extension.JPG" alt="Image 3">
+            </div>
+            <div class="gallery-item">
+              <img src="/img/slider/docker-on-aws-gps2017.jpg" alt="Image 3">
+              </div>
+              <div class="gallery-item">
+                <img src="/img/slider/Docker-Pune-2018.jpg" alt="Image 3">
+                </div>
+                <div class="gallery-item">
+                  <img src="/img/slider/Docker-Pune-2023.jpg" alt="Image 3">
+                  </div>
+                  <div class="gallery-item">
+                    <img src="/img/slider/GPS-Docker.jpg" alt="Image 3">
+                    </div>
+                    <div class="gallery-item">
+                      <img src="/img/slider/IMG_7612.JPG" alt="Image 3">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="/img/slider/Jfrog.jpg" alt="Image 3">
+                        </div>
+
+                        <div class="gallery-item">
+                          <img src="/img/slider/JFROG_K8s.jpg" alt="Image 3">
+                          </div>
+
+                          <div class="gallery-item">
+                            <img src="/img/slider/k8s-forum-blr-2020.jpg" alt="Image 3">
+                            </div>
+    
+                            <div class="gallery-item">
+                              <img src="/img/slider/KL_University.JPG" alt="Image 3">
+                              </div>
+
+                              <div class="gallery-item">
+                                <img src="/img/slider/mayadata.jpg" alt="Image 3">
+                                </div>  
+      
+                                <div class="gallery-item">
+                                  <img src="/img/slider/microsoft-reactor.jpg" alt="Image 3">
+                                  </div>  
+
+                                  <div class="gallery-item">
+                                    <img src="/img/slider/okteto.jpg" alt="Image 3">
+                                    </div>  
+
+
+                                    <div class="gallery-item">
+                                      <img src="/img/slider/Rakuten.JPG" alt="Image 3">
+                                      </div> 
+  
+                                      <div class="gallery-item">
+                                        <img src="/img/slider/Rancher.jpg" alt="Image 3">
+                                        </div> 
+                                        <div class="gallery-item">
+                                          <img src="/img/slider/SAP_LAB_KO_google.jpg" alt="Image 3">
+                                          </div> 
+                                          <div class="gallery-item">
+                                            <img src="/img/slider/SAPLAB2020-team.jpg" alt="Image 3">
+                                            </div> 
+                                            <div class="gallery-item">
+                                              <img src="/img/slider/st-paloti-nagpur.JPG" alt="Image 3">
+                                              </div> 
+                                              <div class="gallery-item">
+                                                <img src="/img/slider/thoughtworks.jpg" alt="Image 3">
+                                                </div> 
+                                                <div class="gallery-item">
+                                                  <img src="/img/slider/VISA.jpg" alt="Image 3">
+                                                  </div> 
+                                                  <div class="gallery-item">
+                                                    <img src="/img/slider/walmartlabs.jpg" alt="Image 3">
+                                                    </div> 
+                                                    <div class="gallery-item">
+                                                      <img src="/img/slider/IMG-20200529-WA0005.jpg" alt="Image 3">
+                                                      </div> 
+                                                      <div class="gallery-item">
+                                                        <img src="/img/slider/SAP_LAB_AWARD.jpg" alt="Image 3">
+                                                        </div>        
+    </div>
+  </div>
+</div>
+
+</section>
   </main>
+
+
 
 
 
