added-blog-tool-visitor-counter

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,8 +8,11 @@
                         <p class="mb-0">
                             {{ $yearToken := (cond (isset .Site.Params (lower "copyrightYearToken")) $.Site.Params.copyrightYearToken ":YEAR:") }}
                             {{ replace $.Site.Params.footer.copyright $yearToken (string (now.Format "2006")) | markdownify }}
+
                         </p>
                     </div>
+                    <center> <a href="https://visitorbadge.io/status?path=https%3A%2F%2Fkubedaily.com"><img src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fkubedaily.com&label=KubeDaily&labelColor=%232ccce4&countColor=%2337d67a" /></a> </center> 
+
                 </div>
 
                 <div class="col-sm-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
