--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <div class="card">
+    <div class="card mb-4">
         <div class="card-body">
             <h1 class="card-title">{{ .Title }}</h1>
             <p class="text-muted">Posted on {{ .Date.Format "January 2, 2006" }}</p>
