--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,7 +14,9 @@
                     <center> <a href="https://visitorbadge.io/status?path=https%3A%2F%2Fkubedaily.com"><img src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fkubedaily.com&label=KubeDaily&labelColor=%232ccce4&countColor=%2337d67a" /></a> </center> 
 
                 </div>
-
+                <h6>  Subscribe to CloudNativeFolks Community Newsletter 
+    </h6>
+                <iframe src="https://cloudnativefolks.substack.com/embed" width="480" height="150" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no">  </iframe>
                 <div class="col-sm-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
                     <!-- <p>Privacy</p> -->
                 </div><!--end col-->
