docs-footer-newsletter

--- a/layouts/partials/docs/footer.html
+++ b/layouts/partials/docs/footer.html
@@ -10,7 +10,11 @@
                     </p>
                 </div>
             </div><!--end col-->
+            <center> <h6>  Subscribe to CloudNativeFolks Community Newsletter 
+            </h6></center>
+                        <iframe src="https://cloudnativefolks.substack.com/embed" width="480" height="150" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no">  </iframe>
         </div><!--end row-->
+        
     </div><!--end container-->
 </footer><!--end footer-->
 <!-- End -->
