--- a/layouts/partials/docs/footer.html
+++ b/layouts/partials/docs/footer.html
@@ -11,8 +11,8 @@
                 </div>
             </div><!--end col-->
             <center> <h6>  Subscribe to CloudNativeFolks Community Newsletter 
-            </h6></center>
-                        <iframe src="https://cloudnativefolks.substack.com/embed" width="480" height="150" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no">  </iframe>
+            </h6>
+                        <iframe src="https://cloudnativefolks.substack.com/embed" width="480" height="150" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no">  </iframe> </center>
         </div><!--end row-->
         
     </div><!--end container-->
