--- a/layouts/partials/docs/footer/footer-scripts.html
+++ b/layouts/partials/docs/footer/footer-scripts.html
@@ -54,4 +54,6 @@
     <script type="text/javascript" src="{{ $js.Permalink }}" integrity="{{ $js.Data.Integrity }}" crossorigin="anonymous" defer></script>
 {{- else }}
     <script type="text/javascript" src="{{ $js.Permalink }}" defer></script>
+    <script data-goatcounter="https://sangam.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 {{- end }}
